--- a/gradle-skeleton/client/build.gradle
+++ b/gradle-skeleton/client/build.gradle
@@ -15,6 +15,11 @@ application {
     // Define the main class for the application.
     mainClassName = 'edu.duke.ece651.teamX.client.App'
 }
+dependencies {
+    //mocking
+    testImplementation "org.mockito:mockito-core:3.+"
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
+}
 
 
 
